# apple-ecocide

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: generate-rules.yml  pages.yml
categories/: apple-ads.toml  apple-appstore.toml  apple-books.toml  apple-captive-portal.toml  apple-content.toml  apple-device-setup.toml  apple-dns.toml  apple-find-my.toml  apple-game-center.toml  apple-homekit.toml  apple-icloud.toml  apple-intelligence.toml  apple-location.toml  apple-maps.toml  apple-mdm.toml  apple-messaging.toml  apple-music.toml  apple-news.toml  apple-pay.toml  apple-podcasts.toml  apple-push-notifications.toml  apple-screentime.toml  apple-siri.toml  apple-software-updates.toml  apple-stocks.toml  apple-telemetry.toml  apple-time-servers.toml  apple-tv.toml  apple-universal-links.toml  apple-wallpapers.toml  apple-weather.toml  brave-safe-browsing.toml  brave-telemetry.toml  chrome-telemetry.toml  google-ads.toml  google-safe-browsing.toml  google-telemetry.toml  microsoft-telemetry.toml  mozilla-safe-browsing.toml  mozilla-telemetry.toml  (+3 more)
src/: lib.rs  main.rs  wasm.rs
web/: index.html
