[package]
name = "apple-ecocide"
version = "0.1.0"
edition = "2021"
description = "Block or allow as much or as little of the Apple ecosystem using simple, high-level categories."
authors = ["Bob Stanton"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:walkdir"]

[dependencies]
anyhow = "1"
glob = "0.3"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI-only dependencies
clap = { version = "4", features = ["derive", "color", "help"], optional = true }
walkdir = { version = "2", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "apple-ecocide"
required-features = ["cli"]

[profile.release]
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
